<resources>
    <string name="app_name">SocNet</string>
    <string name="my_profile">My profile</string>
    <string name="posts">Posts</string>
    <string name="description_post_author_avatar">Author image</string>
    <string name="show_coords">Show on map</string>
    <string name="show_mention_ids">Show people</string>
    <string name="show_link_resource">Show resource</string>
    <string name="like">Like</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="to_sign_in">Sign in</string>
    <string name="name">name</string>
    <string name="confirm_password">confirm password</string>
    <string name="to_sign_up">Sign up</string>
    <string name="emptyLoginPasswordError">Login and password must be filled</string>
    <string name="to_log_out">Log out</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="emptyFieldsError">Empty fields</string>
    <string name="differentPasswords">Different passwords</string>
    <string name="description_like">like</string>
    <string name="content_attachment">Attachment</string>
    <string name="description_add_new">Add new</string>
    <string name="start_pause">Start/pause</string>
    <string name="see_also">See also:</string>
    <string name="show_posts">Show Posts</string>
    <string name="show_jobs">Show jobs</string>
    <string name="users">Users</string>
    <string name="link">Additional link</string>
    <string name="none">None</string>
    <string name="offline">OFFLINE</string>
    <string name="online">ONLINE</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="url_string">Enter URL</string>
    <string name="no_data">There is no data yet</string>
    <string name="latitude">Enter latitude</string>
    <string name="longitude">Enter longitude</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_position">Enter position</string>
    <string name="enter_start">Enter start</string>
    <string name="enter_finish">Enter finish</string>
    <string name="enter_link">Enter link</string>
    <string name="name_label">Name:</string>
    <string name="position_label">Position:</string>
    <string name="start_label">Start:</string>
    <string name="finish_label">Finish:</string>
    <string name="link_label">Link:</string>
    <string name="save">Save</string>
    <string name="enter_datetime">Enter date and time</string>
    <string name="enter_content">Enter content</string>
    <string name="events">Events</string>
    <string name="post_likers">Users, who liked post</string>
    <string name="post_mentions">Users, who is mentioned in the post</string>
    <string name="event_likers">Users, who liked event</string>
    <string name="show_map_error">Can\'t show map</string>
    <string name="fill_fields_correctly">Fill fields correctly</string>
    <string name="enter_url_or_pick_attachment">Enter URL or pick attachment</string>
    <string name="longitude_error"><![CDATA[Longitude must be >= -180 and <= 180]]></string>
    <string name="latitude_error"><![CDATA[Latitude must be >= -90 and <= 90]]></string>
    <string name="field_must_be_filled">Field must be filled</string>
    <string name="show">Show</string>
    <string name="event_type">Event type:</string>
    <string name="datetime">Date-time</string>
    <string name="event_participants">Participants</string>
    <string name="event_speakers">Speakers</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="remove_post">Remove post?</string>
    <string name="remove_job">Remove job?</string>
    <string name="remove_event">Remove event?</string>
</resources>