<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/myProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_spacing"
            android:layout_weight="1"
            android:contentDescription="@string/my_profile"
            android:text="@string/my_profile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/postsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/posts"
            android:text="@string/posts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eventsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_weight="1"
            android:contentDescription="@string/events"
            android:text="@string/events" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/usersButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/users"
            android:text="@string/users" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signingButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_weight="1"
            android:contentDescription="@string/to_sign_in"
            android:text="@string/to_sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logOutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_weight="1"
            android:contentDescription="@string/to_log_out"
            android:text="@string/to_log_out" />

    </LinearLayout>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout2"
        app:navGraph="@navigation/nav_main"
        tools:context=".MainActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>