<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewPostFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:hint="@string/enter_content"
                android:padding="@dimen/small_spacing">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="8" />
            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:id="@+id/eventRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_offline"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_offline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/light_green"
                    android:text="@string/offline" />

                <RadioButton
                    android:id="@+id/radio_button_online"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/common_spacing"
                    android:buttonTint="@color/light_green"
                    android:text="@string/online" />
            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:hint="@string/enter_datetime"
                android:padding="@dimen/small_spacing">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/datetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:hint="@string/enter_link"
                android:padding="@dimen/small_spacing">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_spacing"
                android:hint="@string/latitude"
                android:padding="@dimen/small_spacing">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longitude"
                android:padding="@dimen/small_spacing">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/selectAttachmentType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginTop="@dimen/common_spacing"
                android:text="@string/none" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url_string"
                android:padding="@dimen/small_spacing">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/urlString"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/photoPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_spacing"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/savePost"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pickPhoto"
                    style="@style/Widget.AppTheme.PostButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_select_photo"
                    android:padding="@dimen/common_spacing"
                    app:icon="@drawable/ic_photo_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/takePhoto"
                    style="@style/Widget.AppTheme.PostButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_take_photo"
                    android:padding="@dimen/common_spacing"
                    app:icon="@drawable/ic_camera_24dp"
                    app:layout_constraintStart_toEndOf="@id/pickPhoto"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/removePhoto"
                    style="@style/Widget.AppTheme.PostButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:contentDescription="@string/description_like"
                    android:padding="@dimen/common_spacing"
                    app:icon="@drawable/ic_baseline_delete_24"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/common_spacing"
                    android:contentDescription="@string/description_photo"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pickPhoto" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="error,progress,savePost" />

    <TextView
        android:id="@+id/error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:textAlignment="center"
        android:textColor="@color/dark_red"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/savePost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/light_green"
        android:padding="@dimen/common_spacing"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/savePost"
        style="@style/Widget.AppTheme.PostButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_take_photo"
        android:padding="@dimen/common_spacing"
        android:text="@string/save"
        android:textColor="@color/green"
        app:icon="@drawable/ic_baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>